# rust-vad

./: .gitignore  Cargo.toml
data/: 59649877-_1.ulaw  60100354-60100354_2.ulaw  807098-4ecad428-d7cc-471f-bf76-78bee8a7238c.ulaw  853267-tx-0.ulaw
src/: audio.rs  ffmpeg.rs  g711.rs  main.rs  vad.rs
