[package]
name = "rust-vad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.7.2"
ndarray = "0.15.6"
ort = { version = "2.0.0-alpha.2" }
tokio = { version = "1.35.0", features = ["full"] }
wavers = { version = "1.1.1", features = ["ndarray"] }
